# fuel-indexer-testnet-traffic

./: Cargo.toml
contracts/subcurrency/: Forc.toml
contracts/subcurrency/src/: main.sw
src/: traffic.rs  traffic_fuels.rs
